--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -1,10 +1,10 @@
-<nav class="navbar navbar-static-top navbar-inverse">
+<nav class="navbar navbar-static-top navbar-inverse" role="navigation">
     <div class="container-fluid">
         <div class="navbar-header">
             <a class="navbar-brand" ui-sref="home()">
                 <span class="glyphicon glyphicon-home"></span> Sample App
             </a>
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+            <button type="button" ng-init="navCollapsed = true" ng-click="navCollapsed = !navCollapsed" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
                     aria-expanded="false" aria-controls="navbar">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
@@ -13,7 +13,7 @@
             </button>
         </div>
 
-        <div class="collapse navbar-collapse" id="navbar">
+        <div class="collapse navbar-collapse" ng-class="!navCollapsed && 'in'" ng-click="navCollapsed = true" id="navbar">
             <ul class="nav navbar-nav">
                 <li class="active"><a ui-sref="home()">Home</a></li>
                 <li><a ng-href="#">About</a></li>
