feat(articleList): filter and order article list
This feature insert a order and filter to list  the articles

#6

--- a/src/app/article/article.list.html
+++ b/src/app/article/article.list.html
@@ -1,5 +1,6 @@
     <h2>Articles List</h2>
     <a ui-sref="^.create" class="button">Create article</a>
+    <label>Filtrar: <input ng-model="searchArticle"></label>
     <table>
         <tr>
             <td>Title</td>
@@ -7,7 +8,7 @@
             <td>Slug</td>
             <td>Action</td>
         </tr>
-        <tr ng-repeat="item in articles.articles">
+        <tr ng-repeat="item in articles.articles | orderBy:'-fullTitle':true | filter:searchArticle">
             <td>
                 <a ui-sref="^.edit({id: item.id})">{{item.fullTitle}}</a>
             </td>
