--- a/src/app/article/article.list.html
+++ b/src/app/article/article.list.html
@@ -1,12 +1,16 @@
     <h2>Articles List</h2>
-    <a ui-sref="^.create" class="button">Create article</a>
-    <label>Filtrar: <input ng-model="searchArticle"></label>
-    <table>
+
+    <div class="article-table-controls">
+        <a ui-sref="^.create" class="btn btn-success">Create article</a>
+        <label class="pull-right">Filtrar: <input ng-model="searchArticle"></label>
+    </div>
+
+    <table class="table table-striped">
         <tr>
-            <td>Title</td>
-            <td>Updated At</td>
-            <td>Slug</td>
-            <td>Action</td>
+            <th>Title</th>
+            <th>Updated At</th>
+            <th>Slug</th>
+            <th>Action</th>
         </tr>
         <tr ng-repeat="item in articles.articles | orderBy:'-fullTitle':true | filter:searchArticle">
             <td>
