--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -64,6 +64,10 @@ $icon-font-path: "../../bower_components/bootstrap-sass-official/assets/fonts/bo
     background-color: #428bca;
 }
 
+.article-table-controls {
+  padding: 15px 0;
+}
+
 /**
  *  Do not remove this comments bellow. It's the markers used by gulp-inject to inject
  *  all your sass files automatically
